--- a/funktheo.tex
+++ b/funktheo.tex
@@ -21,7 +21,7 @@
 
 \ifthenelse{\equal{\sectioning}{1}}{}{\automark[chapter]{chapter}}%different headlines for chapter-only and sectioning
 
-\includeonly{content/isosing}											% while writing your book, compile only what you need
+\includeonly{content/laurent}											% while writing your book, compile only what you need
 \binoppenalty=\maxdimen
 \relpenalty=\maxdimen
 \begin{document}
@@ -54,6 +54,7 @@
 \include{content/int2}
 \include{content/fund}
 \include{content/isosing}
+\include{content/laurent}
 % only use section-wise documents since include inserts new pages!
 % ================================
 \ifthenelse{\equal{\useThumbs}{1}}
