--- a/content/fund.tex
+++ b/content/fund.tex
@@ -250,5 +250,5 @@ Zum Beispiel: $ \sin $, $ \cos $, $ \exp $.
 \begin{beweis}
 	\[ f(z)=\frac{1}{2\pi i}\int_{\partial G}^{}\frac{f(\zeta)}{\zeta-z}\dd\zeta\Rightarrow f^{(k)}(z)=\frac{k!}{2\pi i}\int_{\partial G}^{}\frac{f(\zeta)}{(\zeta-z)^{k+1}}\dd\zeta \]
 	Es folgt:
-	\[ |f^{(k)}(z)\leq\frac{k!}{2\pi}\frac{|f|_{\partial G}{d(z,\partial G)^{k+1}}\ell_1(\partial G) \]
+	\[ |f^{(k)}(z)\leq\frac{k!}{2\pi}\frac{|f|_{\partial G}}{d(z,\partial G)^{k+1}}\ell_1(\partial G) \]
 \end{beweis}
