--- a/content/folgen.tex
+++ b/content/folgen.tex
@@ -1,5 +1,4 @@
-\chapter{Konvergente Folgen komplexer Zahlen}
-\subsection*{Rechenregeln}
+\section{Konvergente Folgen komplexer Zahlen}
 Konvergiert die Folge $ c_n $ gegen $ c\in\C $, so liegen in jeder Kreisscheibe $ B_\e(c) $, $ \e>0 $, um $ c $ fast alle Folgenglieder $ c_n $.\\ F\"ur jedes $ z\in\C $ mit $ |z|<1 $ ist die \deftxt{Potenzfolge $ z^n $} konvergent: $ \lim z^n=0 $; f\"ur alle $ |z|>1 $ ist die Folge $ z^n $ divergent.\\
 \begin{definition}
 Eine Folge $ c_n $ hei\ss t \deftxt{beschr\"ankt}$ :\Leftrightarrow\exists M>0 $, so dass $ |c_n|\leq M\forall n\in\N $.\\
