--- a/content/kapitel1.tex
+++ b/content/kapitel1.tex
@@ -1,5 +1,5 @@
 \chapter{Der K\"orper $ \C $ der komplexen Zahlen}
-\section*{$ \R $ - der K\"orper der reellen Zahlen}
+\section{$ \R $ - der K\"orper der reellen Zahlen}
 Im $ 2- $dimensionalen $ \R- $Vektorraum $ \R^2 $ der geordneten reellen Zahlenpaare $ z\coloneqq(x,y) $ wird eine Multiplikation eingef\"uhrt verm\"oge
 \[ (x_1,y_1)(x_2,y_2)\coloneqq(x_1,x_2-y_1y_2, x_1y_2+x_2y_1) \]
 Dadurch wird $ \R^2 $, zusammen mit der Vektorraumaddition
@@ -10,7 +10,7 @@ Dieser K\"orper hei\ss t \deftxt{der K\"orper $ \C $ der komplexen Zahlen}.\\
 Man definiert weiter $ i\coloneqq (0,1)\in\C $. Offensichtlich gilt $ i^2=-1 $, man nennt $ i $ die \deftxt{imagin\"are Einheit} von $ \C $. F\"ur jede Zahl $ z=(x,y)\in\C $ besteht die eindeutige Darstellung $ (x,y)=(x,0)+(0,1)(y,0) $, d.h. $ z=x+iy $ mit $ x,y\in\R $, (wir identifizieren die reellen Zahlen $ x $ mit der komplexen Zahl $ (x,0) $). Man setzt
 \[ \Re z\coloneqq x,\quad \Im z\coloneqq y \]
 wobei $ z=x+iy $ und nennt $ x $ bzw. $ y $ \deftxt{Realteil} bzw. \deftxt{Imagin\"arteil von $ z $}. Die Zahl $ z $ hei\ss t \deftxt{reell} bzw. \deftxt{rein imagin\"ar}, wenn $ \Im z=0 $ bzw. $ \Re z = 0 $, letzteres bedeutet $ z=y $.
-\section*{Skalarpodukt und absoluter Betrag}
+\\
 F\"ur $ z=x+iy $, $ w=u+iv \in\C$ ist \[ \langle z,w\rangle\coloneqq\Re(w,\bar z)=xu+yv \]
 (f\"ur $ z=x+iy $ ist $ \bar z\coloneqq x-iy $) das euklidische Skalarprodukt im reellen Vektorraum $ \C=\R^2 $.\\
 Die nicht-negative reelle Zahl \[ |z|\coloneqq\sqrt{\langle z,\bar z\rangle}=\sqrt{z\bar z}=\sqrt{x^2+y^2} \]
