--- a/content/raum.tex
+++ b/content/raum.tex
@@ -1,5 +1,4 @@
-\chapter[Zusammenh\"angende R\"aume, Gebiete in $ \C $]{Zusammenh\"angende R\"aume,\\Gebiete in $ \C $}
-\section*{Zusammenhang und Wege}
+\section[Zusammenh\"angende R\"aume, Gebiete in $ \C $]{Zusammenh\"angende R\"aume,\\Gebiete in $ \C $}
 \begin{definition}
 Sei $ (X, d_x) $ ein metrische Raum, $ A\subset X $ eine Menge. $ A $ ist \deftxt{zusammenh\"angend}$ \Leftrightarrow\nexists U_1,U_2 $ offen in $ X $, so dass:
 \begin{enumerate}
@@ -58,6 +57,7 @@ Ist $ f $ lokal-konstant, dann ist $ f $ stetig.\\
 		\item $ X $ zusammenh\"angend
 	\end{enumerate}
 \end{satz}
+\newpage
 \begin{beweis}
 	\begin{description}
 		\item[i)$ \Rightarrow $ii)] Sei $ A\subset X $, $ A\neq\emptyset $, offen und abgeschlossen. $ B\coloneqq X\setminus A $ offen und abgeschlossen, $ A\cap B=\emptyset $, $ f(x)= \begin{cases}
@@ -69,8 +69,6 @@ Ist $ f $ lokal-konstant, dann ist $ f $ stetig.\\
 \begin{satz}
 	$ I\subset\R $ Intervall$ \Rightarrow I $ zusammenh\"angend.
 \end{satz}
-\newpage
-\section*{Gebiete in $ \C $}
 \begin{definition}
 	\bullshit
 	\begin{enumerate}
@@ -92,6 +90,7 @@ Ist $ f $ lokal-konstant, dann ist $ f $ stetig.\\
 		\item $ B $ ist wegzusammenh\"angend.
 	\end{enumerate}
 \end{satz}
+\newpage
 \begin{beweis}
 	\begin{description}
 		\item[ii)$ \Rightarrow $iii)] Jedes Polygon ist ein Weg.
@@ -103,7 +102,6 @@ Ist $ f $ lokal-konstant, dann ist $ f $ stetig.\\
 		Zeige: $ f $ lokal konstant. Sei $ w\in B $. Da $ B $ offen, gibt es eine Kreisscheibe $ \triangle\subset B $, $ \triangle\ni w $. Ist $ z\in\triangle $, so existiert ein Polygon von $ z $ nach $ w $ in $ \triangle $. D.h. $ f(w)=1\Rightarrow f(z)=1 $ und $ f(w)=0\Rightarrow f(z)=0 \forall z\in\triangle$. Also ist $ f $ lokal-konstant auf $ B $ und $ f $ somit konstant. Da $ f(p)=1 $ folgt $ f=1 $.
 	\end{description}
 \end{beweis}
-\newpage
 \begin{definition}
 	$ G\subset\C $ Bereich. Ist $ G $ (weg-)zusammenh\"angend, so hei\ss t $ G $ \deftxt{Gebiet}.
 \end{definition}
