--- a/content/reihen.tex
+++ b/content/reihen.tex
@@ -1,4 +1,5 @@
-\chapter{Konvergente und absolut konvergente Reihen}
+\newpage
+\section{Konvergente und absolut konvergente Reihen}
 \begin{definition}
 Ist $ (a_\nu)_{\nu\geq k} $ eine Folge komplexer Zahlen, so hei\ss t die Folge $ (s_n)_{n\geq k} $, $ s_n\coloneqq\sum_{\nu=k}^{n}a_\nu $, der Partialsummen eine \deftxt{(unendliche) Reihe} mit den \deftxt{Gliedern} $ a_\nu $. Man schreibt $ \sum_{\nu=k}^{\infty}a_\nu $, $ \sum_{k}^{\infty}a_\nu $, $ \sum_{\nu\geq k} $ oder einfach $ \sum a_\nu $.\\
  Eine Reihe $ \sum a_\nu $ hei\ss t \deftxt{konvergent}, wenn die Partialsummenfolge $ (s_n) $ konvergiert, andernfalls hei\ss t sie \deftxt{divergent}. Im Konvergenzfall schreibt man suggestiv:
@@ -17,6 +18,7 @@ Eine Reihe $ \sum a_\nu $ konvergiert genau dann wenn $ \forall\e>0\exists n_0\i
 \begin{definition}
 Eine Reihe $ \sum a_\nu $ hei\ss t \deftxt{absolut konvergent}, wenn die Reihe $ \sum |a_\nu| $ nichtnegativer reeller Zahlen konvergiert. 
 \end{definition}
+\newpage
 \begin{satz}[Majorantenkriterium]
 Es sei $ \sum_{\nu\geq k} t_\nu $ eine konvergente Reihe mit reellen Gliedern $ t_\nu\geq 0 $; es sei $ (a_\nu)_{\nu\geq k} $ eine komplexe Zahlenfolge, so dass $ \forall\nu: |a_\nu|\leq t_\nu $. Dann ist $ \sum_{\nu\geq k} a_\nu $ absolut konvergent.
 \end{satz}
