--- a/content/stetig.tex
+++ b/content/stetig.tex
@@ -1,4 +1,4 @@
-\chapter{Stetige Funktionen}
+\section{Stetige Funktionen}
 $ f\colon X\rightarrow Y $, $ f $ hei\ss t \deftxt{Funktion} oder \deftxt{Abbildung}, $ X $ hei\ss t \deftxt{Argumentbereich} und $ Y $ \deftxt{Wertebereich}. Man schreibt auch $ X\ni x\rightarrow f(x)\in Y $.\\
 \begin{definition}
 Eine Abbildung $ f\colon X\rightarrow Y $ hei\ss t \deftxt{stetig im Punkt $ a\in X $}, wenn das $ f- $Urbild $ f^{-1}(V)=\lbrace x\in X\mid f(x)\in V\rbrace $ einer jeden Umgebung $ V $ von $ f(a) $ in $ Y $ eine Umgebung von $ a $ in $ X $ ist.
@@ -24,6 +24,7 @@ Folgende Aussagen sind \"aquivalent:
 \item Das Urbild $ f^{-1}(A) $ jeder in $ Y $ abgeschlossenen Menge $ A $ ist abgeschlossen in $ X $.
 \end{enumerate}
 \end{satz}
+\newpage
 \begin{satz}
 Es sei $ f\colon X\rightarrow Y $ stetig und $ K\subset X $ ein Kompaktum. Dann ist auch $ f(K)\subset Y $ ein Kompaktum.
 \end{satz}
