--- a/funktheo.tex
+++ b/funktheo.tex
@@ -39,14 +39,14 @@
 	
 % ================================
 % include your document parts here
-\include{content/kapitel1}
-\include{content/topo}
-\include{content/folgen}
-\include{content/reihen}
-\include{content/stetig}
-\include{content/raum}
-\include{content/kompdiff}
-\include{content/holo}
+\input{content/kapitel1}
+\input{content/topo}
+\input{content/folgen}
+\input{content/reihen}
+\input{content/stetig}
+\input{content/raum}
+\input{content/kompdiff}
+\input{content/holo}
 \include{content/kapitelzwei}
 \include{content/potenz}
 \include{content/kapitelfuenf}
