--- a/content/topo.tex
+++ b/content/topo.tex
@@ -1,4 +1,4 @@
-\chapter{Topologische Grundbegriffe}
+\section{Topologische Grundbegriffe}
 \begin{definition}
 Ist $ X $ irgendeine Menge, so hei\ss t eine Funktion $ d\colon X\times X\rightarrow\R $, $ (x,y)\mapsto d(x,y) $, eine \deftxt{Metrik auf $ X $}, wenn $ \forall x,y,z\in X $ gilt:
 \begin{enumerate}
@@ -17,7 +17,6 @@ Eine Teilmenge $ U\subset X $ eines metrischen Raumes $ X $ hei\ss t \deftxt{off
 \item $ U_1,U_2,...,U_m $ offen$ \Rightarrow\bigcap_{i=1}^m U_i $ offen
 \end{enumerate}
 \end{definition}
-\newpage
 \begin{definition}
 Eine Menge $ A\subset X $ hei\ss t \deftxt{abgeschlossen} (in $ X $)$ \Leftrightarrow X\setminus A$ offen.
 \begin{enumerate}
@@ -29,7 +28,8 @@ Eine Menge $ A\subset X $ hei\ss t \deftxt{abgeschlossen} (in $ X $)$ \Leftright
 $ A\subset X $ beliebig. Die \deftxt{abgeschlossene H\"ulle $ \bar A $ von $ A $} ist $ \bar A\coloneqq\bigcap B $, so dass $ B\supset A $, $ B $ abgeschlossen. 
 \end{definition}
 Eine Menge $ W\subset X $ hei\ss t \deftxt{Umgebung der Menge $ M\subset X $}, wenn $ \exists V $ offen mit $ M\subset V\subset W $.\\
-Sei $ k\in\N\coloneqq\lbrace 0,1,2,...\rbrace $. Eine Abbildung $ \lbrace k,k+1,k+2,...\rbrace\rightarrow X $, $ n\mapsto c_n $, hei\ss t \deftxt{Folge} in $ X $. Man schreibt kurz $ (c_n) $, im Allgemeinen ist $ k=0 $.\\
+Sei $ k\in\N\coloneqq\lbrace 0,1,2,...\rbrace $. Eine Abbildung $ \lbrace k,k+1,k+2,...\rbrace\rightarrow X $, $ n\mapsto c_n $, hei\ss t \deftxt{Folge} in $ X $. Man schreibt kurz $ (c_n) $, im Allgemeinen ist $ k=0 $.
+\newpage
 \begin{definition}
 Eine Folge $ (c_n) $ hei\ss t \deftxt{konvergent} in $ X $, wenn es einen Punkt $ c\in X $ gibt, so dass in jeder Umgebung von $ c $ fast alle (d.h. alle bis auf endlich viele) Folgenglieder $ c_n $ liegen. Der Punkt $ c $ hei\ss t ein \deftxt{Limes der Folge}. In Zeichen:
 \[ c=\lim_{n\to\infty}c_n \]
@@ -41,7 +41,6 @@ Ein Punkt $ p\in X $ hei\ss t \deftxt{H\"aufungspunkt} einer Menge $ M\subset X 
 \[ U\cap (M\setminus\lbrace p\rbrace)\neq\emptyset \]
 \end{definition}
 In jeder Umgebung eines H\"aufungspunktes $ p $ von $ M $ liegen unendlich viele Punkte von $ M $; es gibt stets eine Folge $ (c_n) $ in $ M\setminus\lbrace p\rbrace $ mit $ \lim c_n=p $.
-\newpage
 \begin{beispiel*}
 \begin{enumerate}
 \item[]
