--- a/funktheo.tex
+++ b/funktheo.tex
@@ -21,7 +21,7 @@
 
 \ifthenelse{\equal{\sectioning}{1}}{}{\automark[chapter]{chapter}}%different headlines for chapter-only and sectioning
 
-%\includeonly{content/laurent}											% while writing your book, compile only what you need
+%\includeonly{content/residuen}											% while writing your book, compile only what you need
 \binoppenalty=\maxdimen
 \relpenalty=\maxdimen
 \begin{document}
@@ -55,6 +55,7 @@
 \include{content/fund}
 \include{content/isosing}
 \include{content/laurent}
+\include{content/residuen}
 % only use section-wise documents since include inserts new pages!
 % ================================
 \ifthenelse{\equal{\useThumbs}{1}}
