--- a/inc/settings/abbreviations.tex
+++ b/inc/settings/abbreviations.tex
@@ -85,3 +85,6 @@
 \renewcommand{\div}{\operatorname{div}}
 \newcommand{\supp}{\operatorname{supp}}
 \newcommand{\rot}{\operatorname{rot}}
+\newcommand{\res}{\operatorname{res}}
+\newcommand{\Int}{\operatorname{Int}}
+\renewcommand{\ind}{\operatorname{ind}}
